# TP-Tri

./: CMakeLists.txt  Liste.h  fonctions.h  initTab.h  main.c  triBulles.h  triBullesAmeliore.h  triExtraction.h  triInsertion.h  triRapide.h  triSelection.h
